# Simple-Windows-Engine-With-Lua-Bindings

./: CMakeLists.txt
Engine/: CMakeLists.txt  GameEngine.cpp  GameWinMain.cpp
Engine/src/: AbstractGame.cpp  GameEngine.cpp  GameEngine.h  GameWinMain.cpp
Game/: CMakeLists.txt
Game/resources/: config.lua  default_game.lua  food.lua  queue.lua  snake.lua
Game/src/: Game.cpp  Game.h  GameWinMain.cpp
